src/objects/c2g__codaCashEntry__c.object
<CustomObject>
    <customHelpPage>c2g__codahelpcashentry</customHelpPage>
    <description>Stores the master details of cash and checks received from, or refunds given to, customer.</description>
    <fields>
        <fullName>c2g__AccountAllocated__c</fullName>
        <formula>c2g__AccountTotal__c - c2g__AccountUnallocated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AccountCurrency__c</fullName>
        <formula>c2g__Account__r.c2g__CODAAccountTradingCurrency__c</formula>
        <label>Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__AccountDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Cash Entries (Account Dimension 1)</relationshipLabel>
        <relationshipName>CashEntriesAcDim1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Cash Entries (Account Dimension 2)</relationshipLabel>
        <relationshipName>CashEntriesAcDim2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Cash Entries (Account Dimension 3)</relationshipLabel>
        <relationshipName>CashEntriesAcDim3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__AccountTotal__c</fullName>
        <formula>IF(ISPICKVAL(c2g__Type__c,&apos;Payment&apos;) || ISPICKVAL(c2g__Type__c,&apos;Payment Refund&apos;),-1 * c2g__Transaction__r.c2g__AccountTotal__c, c2g__Transaction__r.c2g__AccountTotal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AccountUnallocated__c</fullName>
        <formula>IF(ISPICKVAL(c2g__Type__c,&apos;Payment&apos;) || ISPICKVAL(c2g__Type__c,&apos;Payment Refund&apos;),-1 * c2g__Transaction__r.c2g__AccountOutstandingTotal__c, c2g__Transaction__r.c2g__AccountOutstandingTotal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Unallocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Do not change this field. It is automatically populated from cash entry line items. If you override this field, then other processes will fail.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountCurrency__c</fullName>
        <formula>c2g__BankAccount__r.c2g__BankAccountCurrency__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bank Account Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountDimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Cash Entries (Bank Account Dimension 1)</relationshipLabel>
        <relationshipName>CashEntriesBnkAcDim1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountDimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Cash Entries (Bank Account Dimension 2)</relationshipLabel>
        <relationshipName>CashEntriesBnkAcDim2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountDimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Cash Entries (Bank Account Dimension 3)</relationshipLabel>
        <relationshipName>CashEntriesBnkAcDim3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccountValue__c</fullName>
        <label>Bank Account Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BankAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Account</label>
        <referenceTo>c2g__codaBankAccount__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CancelingCashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Canceling Cash Entry Number</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CancelingCashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CashEntryCurrency__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cash Entry Currency</label>
        <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CashEntryRate__c</fullName>
        <label>Cash Entry Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ChargesAmount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Bank Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ChargesGLADimension1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 1</label>
        <referenceTo>c2g__codaDimension1__c</referenceTo>
        <relationshipLabel>Cash Entries (Dimension 1)</relationshipLabel>
        <relationshipName>Cash_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ChargesGLADimension2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 2</label>
        <referenceTo>c2g__codaDimension2__c</referenceTo>
        <relationshipLabel>Cash Entries (Dimension 2)</relationshipLabel>
        <relationshipName>Cash_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ChargesGLADimension3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dimension 3</label>
        <referenceTo>c2g__codaDimension3__c</referenceTo>
        <relationshipLabel>Cash Entries (Dimension 3)</relationshipLabel>
        <relationshipName>Cash_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ChargesGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bank Charges GLA</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a corporate GLA.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>Cash_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__ChargesLocalGLA__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to GLA</description>
        <label>Bank Charges Local GLA</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The selected GLA does not exist or is not valid. It must be a local GLA and must be active.</errorMessage>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.Name</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__IsCorporate__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <filterItems>
                <field>c2g__codaGeneralLedgerAccount__c.c2g__ChartOfAccountsStructure__r.c2g__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>c2g__codaGeneralLedgerAccount__c</referenceTo>
        <relationshipLabel>Cash Entries (Bank Charges Local GLA)</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__CompanyReference__c</fullName>
        <description>Company Reference</description>
        <formula>c2g__OwnerCompany__r.Name</formula>
        <label>Company Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Currency__c</fullName>
        <description>Cash entry currency.</description>
        <formula>c2g__CashEntryCurrency__r.Name</formula>
        <label>Payment Currency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <description>The date on the cheque, etc.</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>c2g__Description__c</fullName>
        <description>An optional description of the item</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DiscardReason__c</fullName>
        <description>The reason the item was discarded (canceled)</description>
        <label>Discard Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__DualRate__c</fullName>
        <label>Dual Rate</label>
        <precision>18</precision>
        <scale>9</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__FromIntercompanyTransfer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>From Intercompany Transfer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__IntercompanyTransfer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Intercompany Transfer</label>
        <referenceTo>c2g__codaIntercompanyTransfer__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__LineCharges__c</fullName>
        <label>Line Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NetBanked__c</fullName>
        <formula>c2g__BankAccountValue__c  -  c2g__TotalCharges__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Banked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NetValue__c</fullName>
        <label>Net Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__OriginalCashEntry__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Original Cash Entry Number</label>
        <referenceTo>c2g__codaCashEntry__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>OriginalCashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__OwnerCompany__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company</label>
        <referenceTo>c2g__codaCompany__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentMethod__c</fullName>
        <description>The type of payment</description>
        <label>Payment Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cash</fullName>
                    <default>true</default>
                    <label>Cash</label>
                </value>
                <value>
                    <fullName>Check</fullName>
                </value>
                <value>
                    <fullName>Electronic</fullName>
                </value>
                <value>
                    <fullName>Mixed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__PaymentNumber__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Number</label>
        <referenceTo>c2g__codaPayment__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentStatus__c</fullName>
        <formula>if( NOT( ISPICKVAL( c2g__Status__c, &apos;Complete&apos; ) ),
&apos;Not Applicable&apos;,
if( c2g__Transaction__r.c2g__DocumentOutstandingTotal__c == 0,&apos;Paid&apos;,
if( c2g__Transaction__r.c2g__DocumentTotal__c == c2g__Transaction__r.c2g__DocumentOutstandingTotal__c, &apos;Unpaid&apos;,
&apos;Part Paid&apos; ) ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentTotal__c</fullName>
        <description>Document total generated in the transaction.</description>
        <formula>IF(ISPICKVAL(c2g__Type__c,&apos;Payment&apos;) || ISPICKVAL(c2g__Type__c,&apos;Payment Refund&apos;),-1 * c2g__Transaction__r.c2g__DocumentTotal__c, c2g__Transaction__r.c2g__DocumentTotal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PaymentType__c</fullName>
        <description>Convert type for final community users.</description>
        <formula>IF( ISPICKVAL(c2g__Type__c, &apos;Receipt&apos;), $Label.c2g__communitiescashentrytypepayment, IF( ISPICKVAL(c2g__Type__c, &apos;Payment&apos;), $Label.c2g__communitiescashentrytypepaid, IF( ISPICKVAL(c2g__Type__c, &apos;Payment Refund&apos;), $Label.c2g__communitiescashentrytyperefunded, $Label.c2g__communitiescashentrytyperefund)))</formula>
        <label>Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__Period__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Financial period</description>
        <label>Period</label>
        <referenceTo>c2g__codaPeriod__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Reference__c</fullName>
        <description>Any reference number from the registered item, such as giro #</description>
        <label>Reference</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__SignedBankCharge__c</fullName>
        <formula>IF( text(c2g__Type__c) = &quot;Refund&quot;, c2g__ChargesAmount__c *-1, c2g__ChargesAmount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Bank Charge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__SignedNetBanked__c</fullName>
        <formula>IF( text(c2g__Type__c) = &quot;Refund&quot;, c2g__NetBanked__c *-1, c2g__NetBanked__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Signed Net Banked</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Status__c</fullName>
        <description>The status of the item</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>In Progress</fullName>
                    <default>true</default>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Discarded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__TotalAllocated__c</fullName>
        <description>The total value minus the outstanding value generated in the transaction.</description>
        <formula>c2g__PaymentTotal__c - c2g__TotalUnallocated__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Allocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TotalCharges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Charges</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__TotalUnallocated__c</fullName>
        <description>The outstanding value generated in the transaction.</description>
        <formula>IF(ISPICKVAL(c2g__Type__c,&apos;Payment&apos;) || ISPICKVAL(c2g__Type__c,&apos;Payment Refund&apos;),-1 * c2g__Transaction__r.c2g__DocumentOutstandingTotal__c, c2g__Transaction__r.c2g__DocumentOutstandingTotal__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Payment Unallocated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Transaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Transaction</label>
        <referenceTo>c2g__codaTransaction__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>c2g__Type__c</fullName>
        <description>The direction of payment</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Receipt</fullName>
                    <default>true</default>
                    <label>Receipt</label>
                </value>
                <value>
                    <fullName>Refund</fullName>
                </value>
                <value>
                    <fullName>Payment</fullName>
                </value>
                <value>
                    <fullName>Payment Refund</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Value__c</fullName>
        <defaultValue>0</defaultValue>
        <description>The amount in home currency</description>
        <label>Cash Entry Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Year__c</fullName>
        <formula>c2g__Period__r.c2g__YearName__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ffcash__DeriveBankAccountDimensions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Bank Account Dimensions</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffcash__DeriveBankAccount__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Bank Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffcash__DeriveBankChargesAnalysis__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Bank Charges Analysis</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffcash__DeriveCurrency__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Currency</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ffcash__DerivePeriod__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Derive Period</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>fflbx__Receipt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AR Cash Transaction</label>
        <referenceTo>fflbx__Receipt__c</referenceTo>
        <relationshipLabel>Cash Entries</relationshipLabel>
        <relationshipName>CashEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Cash Entry</label>
    <listViews>
        <fullName>FF_100_Bruntwood_Management_Services_L_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 100 - Bruntwood Management Services L</label>
        <queue>FF_100_Bruntwood_Management_Services_L</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_106_Bruntwood_Management_Services_3_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 106 - Bruntwood Management Services(3</label>
        <queue>FF_106_Bruntwood_Management_Services_3</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_110_Manchester_Science_Partnerships_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 110 - Manchester Science Partnerships</label>
        <queue>FF_110_Manchester_Science_Partnerships</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_112_Mi_IDEA_Limited_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 112 - Mi-IDEA Limited</label>
        <queue>FF_112_Mi_IDEA_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_113_Citylabs_2_0_Limited_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 113 - Citylabs 2.0 Limited</label>
        <queue>FF_113_Citylabs_2_0_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_115_Manchester_Technopark_Ltd_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 115 - Manchester Technopark Ltd</label>
        <queue>FF_115_Manchester_Technopark_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_125_Salford_Innovation_Park_Ltd_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 125 - Salford Innovation Park Ltd</label>
        <queue>FF_125_Salford_Innovation_Park_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_130_Principal_Agent_Management_Ltd_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 130 - Principal Agent Management Ltd</label>
        <queue>FF_130_Principal_Agent_Management_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_135_Alderley_Park_Holdings_Ltd_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 135 - Alderley Park Holdings Ltd</label>
        <queue>FF_135_Alderley_Park_Holdings_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_139_Alderley_Imaging_Limited_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 139 - Alderley Imaging Limited</label>
        <queue>FF_139_Alderley_Imaging_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_140_Alderley_Park_Limited_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 140 - Alderley Park Limited</label>
        <queue>FF_140_Alderley_Park_Limited</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_141_Circle_Square_District_Holdings_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 141 - Circle Square District Holdings</label>
        <queue>FF_141_Circle_Square_District_Holdings</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_142_Circle_Square_District_Company_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 142 - Circle Square District Company</label>
        <queue>FF_142_Circle_Square_District_Company</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_143_Circle_Square_Green_Company_Ltd_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 143 - Circle Square Green Company Ltd</label>
        <queue>FF_143_Circle_Square_Green_Company_Ltd</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FF_144_Bruntwood_Circle_Square_2_Limit_codaCashEntry</fullName>
        <filterScope>Queue</filterScope>
        <label>FF 144 - Bruntwood Circle Square 2 Limit</label>
        <queue>FF_144_Bruntwood_Circle_Square_2_Limit</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>CSH{000000}</displayFormat>
        <label>Cash Entry Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cash Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>